--- a/common/test/load/multimech/forum/config.cfg
+++ b/common/test/load/multimech/forum/config.cfg
@@ -1,17 +1,21 @@
 [global]
-run_time = 90
-rampup = 60
+run_time = 150
+rampup = 100
 results_ts_interval = 10
-progress_bar = on
-console_logging = on
+progress_bar = off
+console_logging = off
 xml_report = off
 
 
 # [user_group-1]
-# threads = 100
+# threads = 5
 # script = forum_load.py
 
-[user_group-2]
-threads = 100
-script = forum_search.py
+# [user_group-2]
+# threads = 100
+# script = forum_search.py
+
+[user_group-3]
+threads = 5
+script = forum_post.py
 
