--- a/requirements.txt
+++ b/requirements.txt
@@ -54,3 +54,4 @@ dogstatsd-python
 # Taking out MySQL-python for now because it requires mysql to be installed, so breaks updates on content folks' envs.
 # MySQL-python
 sphinx
+xmltodict
