--- a/.github/workflows/migrations-check.yml
+++ b/.github/workflows/migrations-check.yml
@@ -19,7 +19,7 @@ jobs:
         # within the global constraint i.e. Django==4.2.8 in current case
         # because we have global constraint of Django<4.2 
         django-version: ["pinned"]
-        mongo-version: ["4"]
+        mongo-version: ["4", "7"]
         mysql-version: ["8"]
     services:
       mongo:
@@ -27,9 +27,9 @@ jobs:
         ports:
           - 27017:27017
         # Note: Calling mongo here only works with mongo 4, in newer versions of mongo
-        # we'll have to use `mongosh`
+        # we'll have to use `mongosh`, hence the 'which mongosh mongo'.
         options: >-
-          --health-cmd "mongo --quiet --eval 'db.runCommand(\"ping\")'"
+          --health-cmd "$(which mongosh mongo) --quiet --eval 'db.runCommand(\"ping\")'"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 3
