--- a/requirements/edx/bundled.in
+++ b/requirements/edx/bundled.in
@@ -44,8 +44,7 @@ done-xblock                         # a very simple XBlock that allows learners 
 recommender-xblock                  # https://github.com/edx/RecommenderXBlock
 staff-graded-xblock                 # https://github.com/openedx/staff_graded-xblock Allows off-site bulk scoring.
 edx-sga                             # The more well known "staff graded assignment" XBlock, from MIT.
-# ora2>=4.5.0                         # Open Response Assessment XBlock
-ora2 @ git+https://github.com/open-craft/edx-ora2@rpenido/fal-3621-revert-tag-serialize-and-deserialize-changes
+ora2>=4.5.0                         # Open Response Assessment XBlock
 xblock-poll                         # Xblock for polling users
 xblock-drag-and-drop-v2             # Drag and Drop XBlock
 xblock-google-drive                 # XBlock for google docs and calendar
