--- a/.github/workflows/units-test-scripts-structures-pruning.yml
+++ b/.github/workflows/units-test-scripts-structures-pruning.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r scripts/common/requirements/testing.txt
+          pip install -r scripts/structures_pruning/requirements/testing.txt
 
       - name: Run pytest
         run: |
-          pytest scripts/common
+          pytest scripts/structures_pruning
