--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,8 @@ conf/locale/fake*/LC_MESSAGES/*.mo
 # this was a mistake in i18n_tools, now fixed.
 conf/locale/messages.mo
 conf/plugins-locale/
+conf/locale/*/LC_MESSAGES/
+/*/static/js/i18n/
 /*/static/js/xblock.v1-i18n/
 
 ### Testing artifacts
