--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install 'https://github.com/openedx/repo-tools[find_dependencies]'
+          pip install https://github.com/openedx/repo-tools/tree/master/edx_repo_tools[find_dependencies]  # Replace '/path/to/repo-tools' with the actual path to the repo-tools directory
 
       - name: Run dependency check
         run: |
