--- a/requirements/edx/kernel.in
+++ b/requirements/edx/kernel.in
@@ -117,7 +117,7 @@ openedx-calc                        # Library supporting mathematical calculatio
 openedx-django-require
 openedx-events                      # Open edX Events from Hooks Extension Framework (OEP-50)
 openedx-filters                     # Open edX Filters from Hooks Extension Framework (OEP-50)
-openedx-learning                    # Open edX Learning core (experimental)
+git+https://github.com/open-craft/openedx-learning.git@chris/FAL-3604-import-export-courses#egg=openedx-learning                      # Open edX Learning core (experimental)
 openedx-mongodbproxy
 openedx-django-wiki
 openedx-blockstore
