--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install https://github.com/openedx/repo-tools/tree/0.8.6[find_dependencies]
+          pip install edx-repo-tools[find_dependencies]
 
       - name: Find repo-tools package location
         run: pip show edx-repo-tools
