--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -26,13 +26,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install edx-repo-tools[find_dependencies]
 
-      - name: Locate finding_dependency.py
-        run: |
-          find /opt/hostedtoolcache/Python/3.8.18/x64/lib/python3.8/site-packages -name "finding_dependency.py"
-          
       - name: Run dependency check
         run: |
-          which finding_dependency.py
+          python /opt/hostedtoolcache/Python/3.8.18/x64/lib/python3.8/site-packages/finding_dependency.py
 
       - name: Check if any dependency belongs to openedx
         run: |
