--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -34,13 +34,14 @@ jobs:
         with:
           result-encoding: string
           script: |
-            console.log("github.ref='${{ github.ref }}'");
             if ( "${{ github.ref }}".match(/^refs\/heads\/(eol|openuchile|vlabx)\/(\w+)(\.master)?$/) ) { // push to development branch case
               return "${{ github.ref }}".replace(/^refs\/heads\/(eol|openuchile|vlabx)\/(\w+)(\.master)?$/,'$2')
             } else if ( "${{ github.ref }}".match(/^refs\/heads\/(eol|openuchile|vlabx)-release\/(\w+)(\.master)?$/) ) { // push to production branch case
               return "${{ github.ref }}".replace(/^refs\/heads\/(eol|openuchile|vlabx)-release\/(\w+)(\.master)?$/,'$2')
-            } else if ( "${{ github.event.pull_request.base.ref }}".match(/^refs\/heads\/(eol|openuchile|vlabx)\/(\w+)(\.master)?$/) ) { // pr to development branch case
-              return "${{ github.event.pull_request.base.ref }}".replace(/^refs\/heads\/(eol|openuchile|vlabx)\/(\w+)(\.master)?$/,'$2')
+            } else if ( "${{ github.event.pull_request.base.ref }}".match(/^(eol|openuchile|vlabx)\/(\w+)(\.master)?$/) ) { // pr to development branch case
+              return "${{ github.event.pull_request.base.ref }}".replace(/^(eol|openuchile|vlabx)\/(\w+)(\.master)?$/,'$2')
+            } else if ( "${{ github.event.pull_request.base.ref }}".match(/^(eol|openuchile|vlabx)-release\/(\w+)(\.master)?$/) ) { // pr to production branch case
+              return "${{ github.event.pull_request.base.ref }}".replace(/^(eol|openuchile|vlabx)-release\/(\w+)(\.master)?$/,'$2')
             } else throw 'No version'
 
       - name: Obtain release project
@@ -49,13 +50,14 @@ jobs:
         with:
           result-encoding: string
           script: |
-            console.log("github.ref='${{ github.ref }}'");
             if ( "${{ github.ref }}".match(/^refs\/heads\/(eol|openuchile|vlabx)\//) ) { // push to development branch case
               return "${{ github.ref }}".replace(/^refs\/heads\/(eol|openuchile|vlabx)\/.+$/,'$1')
             } else if ( "${{ github.ref }}".match(/^refs\/heads\/(eol|openuchile|vlabx)-release\//) ) { // push to production branch case
               return "${{ github.ref }}".replace(/^refs\/heads\/(eol|openuchile|vlabx)-release\/.+$/,'$1')
-            } else if ( "${{ github.event.pull_request.base.ref }}".match(/^refs\/heads\/(eol|openuchile|vlabx)\//) ) {
-              return "${{ github.event.pull_request.base.ref }}".replace(/^refs\/heads\/(eol|openuchile|vlabx)\/.+$/,'$1')
+            } else if ( "${{ github.event.pull_request.base.ref }}".match(/^(eol|openuchile|vlabx)\//) ) { // pr to development branch case
+              return "${{ github.event.pull_request.base.ref }}".replace(/^(eol|openuchile|vlabx)\/.+$/,'$1')
+            } else if ( "${{ github.event.pull_request.base.ref }}".match(/^(eol|openuchile|vlabx)-release\//) ) { // pr to production branch case
+              return "${{ github.event.pull_request.base.ref }}".replace(/^(eol|openuchile|vlabx)-release\/.+$/,'$1')
             } else throw 'No project'
 
       - name: Obtain release code
