--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,6 +11,8 @@ on:
   pull_request:
     types:
       - opened
+      - reopened
+      - synchronize
     branches:
       - 'eol-release/**'
       - 'openuchile-release/**'
