--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,6 +9,10 @@ on:
     paths-ignore:
       - '.github/workflows/**'
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
     branches:
       - 'eol/**'
       - 'openuchile/**'
