--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -20,9 +20,13 @@ jobs:
         with:
           python-version: '3.8'
 
+      - name: Create Virtual Environment
+        run: python -m venv .venv
+
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
+          source .venv/bin/activate  # Activate the virtual environment
+          pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: List Installed Packages
