chore: testing ci check

--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -29,6 +29,7 @@ jobs:
           if [ -f "$py_reqs" ]; then
             cp "$py_reqs" WORK_DIR/repo_work/base.txt
             echo "Python requirements file: $py_reqs"
+            echo "repo_work directory: $repo_work"
           else
             echo "No Python requirements file found."
           fi
