chore: testing ci check

--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -26,10 +26,11 @@ jobs:
       - name: Copy Python requirements file
         run: |
           for req_file in "requirements/edx/base.txt" "requirements/base.txt" "requirements.txt"; do
-          if [ -f "$req_file" ]; then
-            cp "$req_file" WORK_DIR/repo_work/base.txt
-            echo "Python requirements file found: $req_file"
-            echo "Content of base.txt:"
-            cat "$req_file"
-            break
-          fi
+            if [ -f "$req_file" ]; then
+              cp "$req_file" WORK_DIR/repo_work/base.txt
+              echo "Python requirements file found: $req_file"
+              echo "Content of base.txt:"
+              cat "$req_file"
+              break
+            fi
+          done
