--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -20,14 +20,16 @@ jobs:
         with:
           python-version: '3.8'
 
-      - name: Create repo_work directory
-        run: mkdir -p WORK_DIR/repo_work
+      - name: Create repo_work directory        
+        run: |
+          WORK_DIR="/tmp/unpack_reqs"
+          mkdir -p "$WORK_DIR"/repo_work
 
       - name: Copy Python requirements file
         run: |
           for req_file in "requirements/edx/base.txt" "requirements/base.txt" "requirements.txt"; do
             if [ -f "$req_file" ]; then
-              cp "$req_file" WORK_DIR/repo_work/base.txt
+              cp "$req_file" "$WORK_DIR"/repo_work/base.txt
               echo "Python requirements file found: $req_file"
               echo "Content of base.txt:"
               cat "$req_file"
@@ -37,12 +39,12 @@ jobs:
 
       - name: Create virtual environment
         run: python3 -m venv .venv
-        working-directory: WORK_DIR/repo_work
+        working-directory: $WORK_DIR/repo_work
 
       - name: Upgrade pip
         run: |
           .venv/bin/python3 -m pip install -U pip
-        working-directory: WORK_DIR/repo_work
+        working-directory: $WORK_DIR/repo_work
 
       - name: Download packages
         run: |
@@ -50,9 +52,10 @@ jobs:
           .venv/bin/python3 -m pip download --dest files -r base.txt
           base_txt_path="${GITHUB_WORKSPACE}/files/base.txt"
           echo "Path of base.txt: ${base_txt_path}"
-        working-directory: WORK_DIR/repo_work
+        working-directory: $WORK_DIR/repo_work
 
       - name: Extract GitHub URLs from base.txt
+        id: extract
         run: |
           urls=()
           base_txt_path="./files/base.txt"
@@ -61,9 +64,9 @@ jobs:
               urls+=("${BASH_REMATCH[0]}")
             fi
           done < "${base_txt_path}"
-          echo "::set-output name=github_urls::${urls[*]}"
+          echo "::set-output name=urls::${urls[*]}"
 
       - name: Display GitHub URLs
         run: |
           echo "GitHub URLs:"
-          echo "${{ steps.extract.urls }}"  
+          echo "${{ steps.extract.outputs.urls }}"  
