--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -53,8 +53,8 @@ jobs:
         run: |
           echo "Downloading packages"
           .venv/bin/python3 -m pip download --dest files -r base.txt
-          base_txt_path="${GITHUB_WORKSPACE}/files/base.txt"
-          echo "Path of base.txt: ${base_txt_path}"
+          echo "Path of files: ${{ github.workspace }}/files"
+          cat "$files"
         working-directory: /tmp/unpack_reqs/openedx/edx-platform
 
       - name: Extract GitHub URLs from base.txt
