--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -54,7 +54,7 @@ jobs:
           echo "Downloading packages"
           .venv/bin/python3 -m pip download --dest files -r base.txt
           echo "Path of files: ${{ github.workspace }}/files"
-          cat "$files"
+          cat ${{ github.workspace }}/files"
         working-directory: /tmp/unpack_reqs/openedx/edx-platform
 
       - name: Extract GitHub URLs from base.txt
