test: compile built-in themes as part of static assets check
This will help safe-guard against bugs in the Sass and Webpack build
which only arise from certain uses of the legacy Comprehensive Theming
system.

--- a/.github/workflows/static-assets-check.yml
+++ b/.github/workflows/static-assets-check.yml
@@ -82,5 +82,5 @@ jobs:
         CMS_CFG: lms/envs/minimal.yml
 
       run: |
-        paver update_assets lms
-        paver update_assets cms
+        paver update_assets lms --theme-dirs ./themes
+        paver update_assets cms --theme-dirs ./themes
