--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -6,6 +6,7 @@ on:
 defaults:
   run:
     shell: bash # strict bash
+    working-directory: ./scripts
 
 jobs:
   check_dependencies:
@@ -19,6 +20,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.8'
+
+      - name: Make the script files executable
+        run: chmod +x my-script.sh my-other-script.sh    
 
       - name: Run Python script
         run: python find_dependencies.py
