--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           python-version: '3.8'
 
+      - name: Install requests module
+        run: pip install requests    
+
       - name: Make the script files executable
         run: chmod +x find_dependencies.py
 
