chore: testing workflow

--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -31,4 +31,4 @@ jobs:
         run: chmod +x find_dependencies.py
 
       - name: Run Python script
-        run: python find_dependencies.py
+        run: python find_dependencies.py edx-platform --org edx
