chore: testing workflow

--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -32,3 +32,4 @@ jobs:
 
       - name: Run Python script
         run: python find_dependencies.py edx-platform --org edx
+        working-directory: ./requirements
