--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -51,4 +51,5 @@ jobs:
 
       - name: Run Python script
         run: python find_dependencies.py edx-platform --org edx
+        working-directory: ./scripts
   
