--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -30,7 +30,7 @@ jobs:
       
       - name: Copy Python requirements file
         run: |
-          for req_file in "requirements/edx/base.txt" "requirements/base.txt" "requirements.txt"; do
+          for req_file in "requirements/edx/kernel.in"; do
             if [ -f "$req_file" ]; then
               cp "$req_file" /tmp/unpack_reqs/openedx/edx-platform/base.txt
               echo "Python requirements file found: $req_file"
